--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "next": "11.1.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-tsparticles": "^1.36.0",
     "sweetalert2": "^11.1.6"
   },
   "devDependencies": {
